--- a/.gitattributes
+++ b/.gitattributes
@@ -2184,8 +2184,6 @@ packages/extra/lua/lauxlib.pas svneol=native#text/plain
 packages/extra/lua/lua.pas svneol=native#text/plain
 packages/extra/lua/lualib.pas svneol=native#text/plain
 packages/extra/matroska/Makefile svneol=native#text/plain
-packages/extra/matroska/Makefile.fpc svneol=native#text/plain
-packages/extra/matroska/matroska.pas svneol=native#text/plain
 packages/extra/newt/Makefile svneol=native#text/plain
 packages/extra/newt/Makefile.fpc svneol=native#text/plain
 packages/extra/newt/README -text
@@ -4240,6 +4238,10 @@ packages/mad/Makefile svneol=native#text/plain
 packages/mad/Makefile.fpc svneol=native#text/plain
 packages/mad/fpmake.pp svneol=native#text/plain
 packages/mad/src/mad.pas svneol=native#text/plain
+packages/matroska/Makefile svneol=native#text/plain
+packages/matroska/Makefile.fpc svneol=native#text/plain
+packages/matroska/fpmake.pp svneol=native#text/plain
+packages/matroska/src/matroska.pas svneol=native#text/plain
 packages/modplug/Makefile svneol=native#text/plain
 packages/modplug/Makefile.fpc svneol=native#text/plain
 packages/modplug/fpmake.pp svneol=native#text/plain
