--- a/.gitattributes
+++ b/.gitattributes
@@ -850,6 +850,8 @@ packages/base/mysql/ver323/mysqls.pp svneol=native#text/plain
 packages/base/mysql/ver40/mysql.pp svneol=native#text/plain
 packages/base/mysql/ver40/mysql_com.pp svneol=native#text/plain
 packages/base/mysql/ver40/mysql_version.pp svneol=native#text/plain
+packages/cairo/Makefile.fpc svneol=native#text/plain
+packages/cairo/src/cairo.pp svneol=native#text/plain
 packages/dbus/Makefile svneol=native#text/plain
 packages/dbus/Makefile.fpc svneol=native#text/plain
 packages/dbus/examples/Makefile svneol=native#text/plain
@@ -1058,11 +1060,6 @@ packages/extra/bzip2/bzip2.pas svneol=native#text/plain
 packages/extra/bzip2/bzip2i386.inc svneol=native#text/plain
 packages/extra/bzip2/fpmake.pp svneol=native#text/plain
 packages/extra/bzip2/pasbzip.pas svneol=native#text/plain
-packages/extra/cairo/Makefile svneol=native#text/plain
-packages/extra/cairo/Makefile.fpc svneol=native#text/plain
-packages/extra/cairo/cairo.pp svneol=native#text/plain
-packages/extra/cairo/fpmake.inc svneol=native#text/plain
-packages/extra/cairo/fpmake.pp svneol=native#text/plain
 packages/extra/cdrom/Makefile svneol=native#text/plain
 packages/extra/cdrom/Makefile.fpc svneol=native#text/plain
 packages/extra/cdrom/README -text
