--- a/.gitattributes
+++ b/.gitattributes
@@ -852,6 +852,24 @@ packages/base/mysql/ver40/mysql_com.pp svneol=native#text/plain
 packages/base/mysql/ver40/mysql_version.pp svneol=native#text/plain
 packages/cairo/Makefile.fpc svneol=native#text/plain
 packages/cairo/src/cairo.pp svneol=native#text/plain
+packages/chm/Makefile svneol=native#text/plain
+packages/chm/Makefile.fpc svneol=native#text/plain
+packages/chm/src/chmbase.pas svneol=native#text/plain
+packages/chm/src/chmcmd.lpi svneol=native#text/plain
+packages/chm/src/chmcmd.lpr svneol=native#text/plain
+packages/chm/src/chmfilewriter.pas svneol=native#text/plain
+packages/chm/src/chmls.lpi svneol=native#text/plain
+packages/chm/src/chmls.lpr svneol=native#text/plain
+packages/chm/src/chmreader.pas svneol=native#text/plain
+packages/chm/src/chmsitemap.pas svneol=native#text/plain
+packages/chm/src/chmspecialfiles.pas svneol=native#text/plain
+packages/chm/src/chmtypes.pas svneol=native#text/plain
+packages/chm/src/chmwriter.pas svneol=native#text/plain
+packages/chm/src/fasthtmlparser.pas svneol=native#text/plain
+packages/chm/src/htmlutil.pas svneol=native#text/plain
+packages/chm/src/paslznonslide.pas svneol=native#text/plain
+packages/chm/src/paslzx.pas svneol=native#text/plain
+packages/chm/src/paslzxcomp.pas svneol=native#text/plain
 packages/dbus/Makefile svneol=native#text/plain
 packages/dbus/Makefile.fpc svneol=native#text/plain
 packages/dbus/examples/Makefile svneol=native#text/plain
@@ -1077,24 +1095,6 @@ packages/extra/cdrom/scsidefs.pp svneol=native#text/plain
 packages/extra/cdrom/showcds.pp svneol=native#text/plain
 packages/extra/cdrom/wincd.pp svneol=native#text/plain
 packages/extra/cdrom/wnaspi32.pp svneol=native#text/plain
-packages/extra/chm/Makefile svneol=native#text/plain
-packages/extra/chm/Makefile.fpc svneol=native#text/plain
-packages/extra/chm/chmbase.pas svneol=native#text/plain
-packages/extra/chm/chmcmd.lpi svneol=native#text/plain
-packages/extra/chm/chmcmd.lpr svneol=native#text/plain
-packages/extra/chm/chmfilewriter.pas svneol=native#text/plain
-packages/extra/chm/chmls.lpi svneol=native#text/plain
-packages/extra/chm/chmls.lpr svneol=native#text/plain
-packages/extra/chm/chmreader.pas svneol=native#text/plain
-packages/extra/chm/chmsitemap.pas svneol=native#text/plain
-packages/extra/chm/chmspecialfiles.pas svneol=native#text/plain
-packages/extra/chm/chmtypes.pas svneol=native#text/plain
-packages/extra/chm/chmwriter.pas svneol=native#text/plain
-packages/extra/chm/fasthtmlparser.pas svneol=native#text/plain
-packages/extra/chm/htmlutil.pas svneol=native#text/plain
-packages/extra/chm/paslznonslide.pas svneol=native#text/plain
-packages/extra/chm/paslzx.pas svneol=native#text/plain
-packages/extra/chm/paslzxcomp.pas svneol=native#text/plain
 packages/extra/fftw/Makefile -text
 packages/extra/fftw/Makefile.fpc -text
 packages/extra/fftw/example.pas -text
