* 4 pkgs a52 bfd aspell bzip2. Bzip2 didn't compile
git-svn-id: trunk@9988 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -704,6 +704,18 @@ installer/winshell.pas svneol=native#text/plain
 installer/writeidx.pas svneol=native#text/plain
 packages/Makefile svneol=native#text/plain
 packages/Makefile.fpc svneol=native#text/plain
+packages/a52/Makefile svneol=native#text/plain
+packages/a52/Makefile.fpc svneol=native#text/plain
+packages/a52/fpmake.pp svneol=native#text/plain
+packages/a52/src/a52.pas svneol=native#text/plain
+packages/aspell/LICENSE svneol=native#text/plain
+packages/aspell/LICENSE.ADDON svneol=native#text/plain
+packages/aspell/Makefile svneol=native#text/plain
+packages/aspell/Makefile.fpc svneol=native#text/plain
+packages/aspell/examples/example.pas svneol=native#text/plain
+packages/aspell/fpmake.pp svneol=native#text/plain
+packages/aspell/src/aspell.pp svneol=native#text/plain
+packages/aspell/src/scheck.pp svneol=native#text/plain
 packages/base/Makefile svneol=native#text/plain
 packages/base/Makefile.fpc svneol=native#text/plain
 packages/base/httpd/Makefile svneol=native#text/plain
@@ -850,6 +862,15 @@ packages/base/mysql/ver323/mysqls.pp svneol=native#text/plain
 packages/base/mysql/ver40/mysql.pp svneol=native#text/plain
 packages/base/mysql/ver40/mysql_com.pp svneol=native#text/plain
 packages/base/mysql/ver40/mysql_version.pp svneol=native#text/plain
+packages/bfd/Makefile svneol=native#text/plain
+packages/bfd/Makefile.fpc svneol=native#text/plain
+packages/bfd/fpmake.pp svneol=native#text/plain
+packages/bfd/src/bfd.pas svneol=native#text/plain
+packages/bzip2/LICENSE svneol=native#text/plain
+packages/bzip2/examples/pasbzip.pas svneol=native#text/plain
+packages/bzip2/fpmake.pp svneol=native#text/plain
+packages/bzip2/src/bzip2.pas svneol=native#text/plain
+packages/bzip2/src/bzip2i386.inc svneol=native#text/plain
 packages/cairo/Makefile.fpc svneol=native#text/plain
 packages/cairo/src/cairo.pp svneol=native#text/plain
 packages/chm/Makefile svneol=native#text/plain
@@ -899,11 +920,7 @@ packages/dts/fpmake.pp svneol=native#text/plain
 packages/dts/src/dts.pas svneol=native#text/plain
 packages/extra/Makefile svneol=native#text/plain
 packages/extra/Makefile.fpc svneol=native#text/plain
-packages/extra/a52/Makefile svneol=native#text/plain
-packages/extra/a52/Makefile.fpc svneol=native#text/plain
-packages/extra/a52/a52.pas svneol=native#text/plain
 packages/extra/a52/fpmake.inc svneol=native#text/plain
-packages/extra/a52/fpmake.pp svneol=native#text/plain
 packages/extra/amunits/Makefile svneol=native#text/plain
 packages/extra/amunits/Makefile.fpc svneol=native#text/plain
 packages/extra/amunits/README -text
@@ -1059,25 +1076,8 @@ packages/extra/amunits/utilunits/tagsarray.pas svneol=native#text/plain
 packages/extra/amunits/utilunits/timerutils.pas svneol=native#text/plain
 packages/extra/amunits/utilunits/vartags.pas svneol=native#text/plain
 packages/extra/amunits/utilunits/wbargs.pas svneol=native#text/plain
-packages/extra/aspell/LICENSE -text
-packages/extra/aspell/LICENSE.ADDON -text
-packages/extra/aspell/Makefile svneol=native#text/plain
-packages/extra/aspell/Makefile.fpc svneol=native#text/plain
-packages/extra/aspell/aspell.pp svneol=native#text/plain
-packages/extra/aspell/example.pas svneol=native#text/plain
 packages/extra/aspell/fpmake.inc svneol=native#text/plain
-packages/extra/aspell/fpmake.pp svneol=native#text/plain
-packages/extra/aspell/scheck.pp svneol=native#text/plain
-packages/extra/bfd/Makefile svneol=native#text/plain
-packages/extra/bfd/Makefile.fpc svneol=native#text/plain
-packages/extra/bfd/bfd.pas svneol=native#text/plain
 packages/extra/bfd/fpmake.inc svneol=native#text/plain
-packages/extra/bfd/fpmake.pp svneol=native#text/plain
-packages/extra/bzip2/LICENSE -text
-packages/extra/bzip2/bzip2.pas svneol=native#text/plain
-packages/extra/bzip2/bzip2i386.inc svneol=native#text/plain
-packages/extra/bzip2/fpmake.pp svneol=native#text/plain
-packages/extra/bzip2/pasbzip.pas svneol=native#text/plain
 packages/extra/cdrom/Makefile svneol=native#text/plain
 packages/extra/cdrom/Makefile.fpc svneol=native#text/plain
 packages/extra/cdrom/README -text
