* fpgtk first pass
git-svn-id: trunk@9994 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -1164,30 +1164,7 @@ packages/extra/forms/fd2pascal.pp svneol=native#text/plain
 packages/extra/forms/fpmake.inc svneol=native#text/plain
 packages/extra/forms/fpmake.pp svneol=native#text/plain
 packages/extra/forms/xforms.pp svneol=native#text/plain
-packages/extra/fpgtk/Makefile svneol=native#text/plain
-packages/extra/fpgtk/Makefile.fpc svneol=native#text/plain
-packages/extra/fpgtk/def/objectdef.pp svneol=native#text/plain
-packages/extra/fpgtk/demo/Makefile svneol=native#text/plain
-packages/extra/fpgtk/demo/Makefile.fpc svneol=native#text/plain
-packages/extra/fpgtk/demo/lister.pp svneol=native#text/plain
-packages/extra/fpgtk/demo/testgtk.pp svneol=native#text/plain
-packages/extra/fpgtk/demo/testgtk.ppr -text
-packages/extra/fpgtk/editor/buttonrow.pp svneol=native#text/plain
-packages/extra/fpgtk/editor/finddlgs.pp svneol=native#text/plain
-packages/extra/fpgtk/editor/gtkdef.pp svneol=native#text/plain
-packages/extra/fpgtk/editor/gtkdeftexts.pp svneol=native#text/plain
-packages/extra/fpgtk/editor/gtkeditor.pp svneol=native#text/plain
-packages/extra/fpgtk/editor/progwin.pp svneol=native#text/plain
-packages/extra/fpgtk/editor/settingsrec.pp svneol=native#text/plain
-packages/extra/fpgtk/editor/xpms.pp svneol=native#text/plain
-packages/extra/fpgtk/fpglib.pp svneol=native#text/plain
-packages/extra/fpgtk/fpgtk.def -text
-packages/extra/fpgtk/fpgtk.pp svneol=native#text/plain
-packages/extra/fpgtk/fpgtkext.pp svneol=native#text/plain
 packages/extra/fpgtk/fpmake.inc svneol=native#text/plain
-packages/extra/fpgtk/fpmake.pp svneol=native#text/plain
-packages/extra/fpgtk/pgtk/pgtk.pp svneol=native#text/plain
-packages/extra/fpgtk/pgtk/pgtk.ppr -text
 packages/extra/gbaunits/Makefile -text
 packages/extra/gbaunits/Makefile.fpc -text
 packages/extra/gbaunits/bios_asm.as -text
@@ -3089,6 +3066,29 @@ packages/fcl-xml/src/xpath.pp svneol=native#text/plain
 packages/fcl-xml/tests/README svneol=native#text/plain
 packages/fcl-xml/tests/template.xml svneol=native#text/plain
 packages/fcl-xml/tests/xmlts.pp svneol=native#text/plain
+packages/fpgtk/Makefile svneol=native#text/plain
+packages/fpgtk/Makefile.fpc svneol=native#text/plain
+packages/fpgtk/fpmake.pp svneol=native#text/plain
+packages/fpgtk/src/def/objectdef.pp svneol=native#text/plain
+packages/fpgtk/src/demo/Makefile svneol=native#text/plain
+packages/fpgtk/src/demo/Makefile.fpc svneol=native#text/plain
+packages/fpgtk/src/demo/lister.pp svneol=native#text/plain
+packages/fpgtk/src/demo/testgtk.pp svneol=native#text/plain
+packages/fpgtk/src/demo/testgtk.ppr -text
+packages/fpgtk/src/editor/buttonrow.pp svneol=native#text/plain
+packages/fpgtk/src/editor/finddlgs.pp svneol=native#text/plain
+packages/fpgtk/src/editor/gtkdef.pp svneol=native#text/plain
+packages/fpgtk/src/editor/gtkdeftexts.pp svneol=native#text/plain
+packages/fpgtk/src/editor/gtkeditor.pp svneol=native#text/plain
+packages/fpgtk/src/editor/progwin.pp svneol=native#text/plain
+packages/fpgtk/src/editor/settingsrec.pp svneol=native#text/plain
+packages/fpgtk/src/editor/xpms.pp svneol=native#text/plain
+packages/fpgtk/src/fpglib.pp svneol=native#text/plain
+packages/fpgtk/src/fpgtk.def svneol=native#text/plain
+packages/fpgtk/src/fpgtk.pp svneol=native#text/plain
+packages/fpgtk/src/fpgtkext.pp svneol=native#text/plain
+packages/fpgtk/src/pgtk/pgtk.pp svneol=native#text/plain
+packages/fpgtk/src/pgtk/pgtk.ppr -text
 packages/fpmake.pp svneol=native#text/plain
 packages/fpmkunit/Makefile svneol=native#text/plain
 packages/fpmkunit/Makefile.fpc svneol=native#text/plain
