--- a/.gitattributes
+++ b/.gitattributes
@@ -3068,13 +3068,13 @@ packages/fcl-xml/tests/template.xml svneol=native#text/plain
 packages/fcl-xml/tests/xmlts.pp svneol=native#text/plain
 packages/fpgtk/Makefile svneol=native#text/plain
 packages/fpgtk/Makefile.fpc svneol=native#text/plain
+packages/fpgtk/examples/Makefile svneol=native#text/plain
+packages/fpgtk/examples/Makefile.fpc svneol=native#text/plain
+packages/fpgtk/examples/lister.pp svneol=native#text/plain
+packages/fpgtk/examples/testgtk.pp svneol=native#text/plain
+packages/fpgtk/examples/testgtk.ppr svneol=native#text/plain
 packages/fpgtk/fpmake.pp svneol=native#text/plain
 packages/fpgtk/src/def/objectdef.pp svneol=native#text/plain
-packages/fpgtk/src/demo/Makefile svneol=native#text/plain
-packages/fpgtk/src/demo/Makefile.fpc svneol=native#text/plain
-packages/fpgtk/src/demo/lister.pp svneol=native#text/plain
-packages/fpgtk/src/demo/testgtk.pp svneol=native#text/plain
-packages/fpgtk/src/demo/testgtk.ppr -text
 packages/fpgtk/src/editor/buttonrow.pp svneol=native#text/plain
 packages/fpgtk/src/editor/finddlgs.pp svneol=native#text/plain
 packages/fpgtk/src/editor/gtkdef.pp svneol=native#text/plain
