--- a/.gitattributes
+++ b/.gitattributes
@@ -4137,6 +4137,14 @@ packages/ncurses/src/panel.pp svneol=native#text/plain
 packages/ncurses/src/pxpic.inc svneol=native#text/plain
 packages/ncurses/src/pxpic.txt svneol=native#text/plain
 packages/ncurses/tests/testn.pp svneol=native#text/plain
+packages/newt/Makefile svneol=native#text/plain
+packages/newt/Makefile.fpc svneol=native#text/plain
+packages/newt/examples/README svneol=native#text/plain
+packages/newt/examples/newt1.pas svneol=native#text/plain
+packages/newt/examples/newt2.pas svneol=native#text/plain
+packages/newt/examples/newt3.pas svneol=native#text/plain
+packages/newt/fpmake.pp svneol=native#text/plain
+packages/newt/src/newt.pp svneol=native#text/plain
 packages/odbc/Makefile svneol=native#text/plain
 packages/odbc/Makefile.fpc svneol=native#text/plain
 packages/odbc/README svneol=native#text/plain
