--- a/.gitattributes
+++ b/.gitattributes
@@ -3792,6 +3792,11 @@ packages/imagemagick/src/quantize.inc svneol=native#text/plain
 packages/imagemagick/src/semaphore.inc svneol=native#text/plain
 packages/imagemagick/src/statistic.inc svneol=native#text/plain
 packages/imagemagick/src/type.inc svneol=native#text/plain
+packages/imlib/Makefile svneol=native#text/plain
+packages/imlib/Makefile.fpc svneol=native#text/plain
+packages/imlib/fpmake.pp svneol=native#text/plain
+packages/imlib/src/gdk_imlib.pp svneol=native#text/plain
+packages/imlib/src/imlib.pp svneol=native#text/plain
 packages/ldap/Makefile svneol=native#text/plain
 packages/ldap/Makefile.fpc svneol=native#text/plain
 packages/ldap/fpmake.pp svneol=native#text/plain
