--- a/.gitattributes
+++ b/.gitattributes
@@ -873,6 +873,21 @@ packages/bzip2/src/bzip2.pas svneol=native#text/plain
 packages/bzip2/src/bzip2i386.inc svneol=native#text/plain
 packages/cairo/Makefile.fpc svneol=native#text/plain
 packages/cairo/src/cairo.pp svneol=native#text/plain
+packages/cdrom/Makefile svneol=native#text/plain
+packages/cdrom/Makefile.fpc svneol=native#text/plain
+packages/cdrom/examples/getdiscid.pp svneol=native#text/plain
+packages/cdrom/examples/showcds.pp svneol=native#text/plain
+packages/cdrom/fpmake.pp svneol=native#text/plain
+packages/cdrom/src/cdrom.pp svneol=native#text/plain
+packages/cdrom/src/cdromioctl.pp svneol=native#text/plain
+packages/cdrom/src/cdromlin.inc svneol=native#text/plain
+packages/cdrom/src/cdromw32.inc svneol=native#text/plain
+packages/cdrom/src/discid.pp svneol=native#text/plain
+packages/cdrom/src/lincd.pp svneol=native#text/plain
+packages/cdrom/src/major.pp svneol=native#text/plain
+packages/cdrom/src/scsidefs.pp svneol=native#text/plain
+packages/cdrom/src/wincd.pp svneol=native#text/plain
+packages/cdrom/src/wnaspi32.pp svneol=native#text/plain
 packages/chm/Makefile svneol=native#text/plain
 packages/chm/Makefile.fpc svneol=native#text/plain
 packages/chm/src/chmbase.pas svneol=native#text/plain
