--- a/.gitattributes
+++ b/.gitattributes
@@ -3762,6 +3762,52 @@ packages/hash/src/md5.pp svneol=native#text/plain
 packages/hash/src/ntlm.pas svneol=native#text/plain
 packages/hash/src/unixcrypt.pas svneol=native#text/plain
 packages/hash/src/uuid.pas svneol=native#text/plain
+packages/hermes/Makefile svneol=native#text/plain
+packages/hermes/Makefile.fpc svneol=native#text/plain
+packages/hermes/src/clear.inc svneol=native#text/plain
+packages/hermes/src/convert.inc svneol=native#text/plain
+packages/hermes/src/d_32.inc svneol=native#text/plain
+packages/hermes/src/debug.inc svneol=native#text/plain
+packages/hermes/src/dither.inc svneol=native#text/plain
+packages/hermes/src/factconv.inc svneol=native#text/plain
+packages/hermes/src/factory.inc svneol=native#text/plain
+packages/hermes/src/format.inc svneol=native#text/plain
+packages/hermes/src/headp.inc svneol=native#text/plain
+packages/hermes/src/hermconf.inc svneol=native#text/plain
+packages/hermes/src/hermdef.inc svneol=native#text/plain
+packages/hermes/src/hermes.pp svneol=native#text/plain
+packages/hermes/src/i386/headi386.inc -text
+packages/hermes/src/i386/headmmx.inc -text
+packages/hermes/src/i386/mmx_clr.as -text
+packages/hermes/src/i386/mmx_main.as -text
+packages/hermes/src/i386/mmxp2_32.as -text
+packages/hermes/src/i386/mmxp_32.as -text
+packages/hermes/src/i386/x8616lut.as -text
+packages/hermes/src/i386/x86_clr.as -text
+packages/hermes/src/i386/x86_main.as -text
+packages/hermes/src/i386/x86p_16.as -text
+packages/hermes/src/i386/x86p_32.as -text
+packages/hermes/src/i386/x86p_cpy.as -text
+packages/hermes/src/i386/x86p_i8.as -text
+packages/hermes/src/i386/x86p_s32.as -text
+packages/hermes/src/i386/x86pscpy.as -text
+packages/hermes/src/list.inc svneol=native#text/plain
+packages/hermes/src/malloc.inc svneol=native#text/plain
+packages/hermes/src/p_16.inc svneol=native#text/plain
+packages/hermes/src/p_24.inc svneol=native#text/plain
+packages/hermes/src/p_32.inc svneol=native#text/plain
+packages/hermes/src/p_clr.inc svneol=native#text/plain
+packages/hermes/src/p_cnv.inc svneol=native#text/plain
+packages/hermes/src/p_cpy.inc svneol=native#text/plain
+packages/hermes/src/p_g.inc svneol=native#text/plain
+packages/hermes/src/p_ga.inc svneol=native#text/plain
+packages/hermes/src/p_gac.inc svneol=native#text/plain
+packages/hermes/src/p_gca.inc svneol=native#text/plain
+packages/hermes/src/p_gcc.inc svneol=native#text/plain
+packages/hermes/src/p_i8.inc svneol=native#text/plain
+packages/hermes/src/p_muhmu.inc svneol=native#text/plain
+packages/hermes/src/palette.inc svneol=native#text/plain
+packages/hermes/src/utility.inc svneol=native#text/plain
 packages/ibase/Makefile svneol=native#text/plain
 packages/ibase/Makefile.fpc svneol=native#text/plain
 packages/ibase/README svneol=native#text/plain
