--- a/.gitattributes
+++ b/.gitattributes
@@ -1091,23 +1091,6 @@ packages/extra/amunits/utilunits/tagsarray.pas svneol=native#text/plain
 packages/extra/amunits/utilunits/timerutils.pas svneol=native#text/plain
 packages/extra/amunits/utilunits/vartags.pas svneol=native#text/plain
 packages/extra/amunits/utilunits/wbargs.pas svneol=native#text/plain
-packages/extra/cdrom/Makefile svneol=native#text/plain
-packages/extra/cdrom/Makefile.fpc svneol=native#text/plain
-packages/extra/cdrom/README -text
-packages/extra/cdrom/cdrom.pp svneol=native#text/plain
-packages/extra/cdrom/cdromioctl.pp svneol=native#text/plain
-packages/extra/cdrom/cdromlin.inc svneol=native#text/plain
-packages/extra/cdrom/cdromw32.inc svneol=native#text/plain
-packages/extra/cdrom/discid.pp svneol=native#text/plain
-packages/extra/cdrom/fpmake.inc svneol=native#text/plain
-packages/extra/cdrom/fpmake.pp svneol=native#text/plain
-packages/extra/cdrom/getdiscid.pp svneol=native#text/plain
-packages/extra/cdrom/lincd.pp svneol=native#text/plain
-packages/extra/cdrom/major.pp svneol=native#text/plain
-packages/extra/cdrom/scsidefs.pp svneol=native#text/plain
-packages/extra/cdrom/showcds.pp svneol=native#text/plain
-packages/extra/cdrom/wincd.pp svneol=native#text/plain
-packages/extra/cdrom/wnaspi32.pp svneol=native#text/plain
 packages/extra/fftw/Makefile -text
 packages/extra/fftw/Makefile.fpc -text
 packages/extra/fftw/example.pas -text
@@ -1355,14 +1338,6 @@ packages/extra/graph/unix/graph16.inc svneol=native#text/plain
 packages/extra/graph/win32/graph.pp svneol=native#text/plain
 packages/extra/graph/win32/wincrt.pp svneol=native#text/plain
 packages/extra/graph/win32/winmouse.pp svneol=native#text/plain
-packages/extra/libgd/Makefile svneol=native#text/plain
-packages/extra/libgd/Makefile.fpc svneol=native#text/plain
-packages/extra/libgd/README -text
-packages/extra/libgd/fpmake.inc svneol=native#text/plain
-packages/extra/libgd/fpmake.pp svneol=native#text/plain
-packages/extra/libgd/gd.pp svneol=native#text/plain
-packages/extra/libgd/gdtest.pp svneol=native#text/plain
-packages/extra/libgd/gdtestcgi.pp svneol=native#text/plain
 packages/extra/libndsfpc/Makefile svneol=native#text/plain
 packages/extra/libndsfpc/Makefile.fpc svneol=native#text/plain
 packages/extra/libndsfpc/dswifi/dswifi7.inc svneol=native#text/plain
@@ -4073,6 +4048,13 @@ packages/libcurl/fpmake.pp svneol=native#text/plain
 packages/libcurl/src/libcurl.pp svneol=native#text/plain
 packages/libcurl/tests/testcurl.pp svneol=native#text/plain
 packages/libcurl/tests/teststream.pp svneol=native#text/plain
+packages/libgd/Makefile svneol=native#text/plain
+packages/libgd/Makefile.fpc svneol=native#text/plain
+packages/libgd/README svneol=native#text/plain
+packages/libgd/fpmake.pp svneol=native#text/plain
+packages/libgd/src/gd.pp svneol=native#text/plain
+packages/libgd/tests/gdtest.pp svneol=native#text/plain
+packages/libgd/tests/gdtestcgi.pp svneol=native#text/plain
 packages/libpng/Makefile svneol=native#text/plain
 packages/libpng/Makefile.fpc svneol=native#text/plain
 packages/libpng/fpmake.pp svneol=native#text/plain
