--- a/.gitattributes
+++ b/.gitattributes
@@ -4370,6 +4370,12 @@ packages/unzip/fpmake.pp svneol=native#text/plain
 packages/unzip/src/unzip.pp svneol=native#text/plain
 packages/unzip/src/unzipdll.pp svneol=native#text/plain
 packages/unzip/src/ziptypes.pp svneol=native#text/plain
+packages/users/examples/testpass.pp svneol=native#text/plain
+packages/users/examples/testuser.pp svneol=native#text/plain
+packages/users/grp.pp svneol=native#text/plain
+packages/users/pwd.pp svneol=native#text/plain
+packages/users/shadow.pp svneol=native#text/plain
+packages/users/src/users.pp svneol=native#text/plain
 packages/uuid/Makefile svneol=native#text/plain
 packages/uuid/Makefile.fpc svneol=native#text/plain
 packages/uuid/README svneol=native#text/plain
