* Moved users pkg, added makefile.fpc, and made it in general somewhat compilable.     Demo still fails due to crypt_h unit missing
git-svn-id: trunk@10008 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -4370,11 +4370,14 @@ packages/unzip/fpmake.pp svneol=native#text/plain
 packages/unzip/src/unzip.pp svneol=native#text/plain
 packages/unzip/src/unzipdll.pp svneol=native#text/plain
 packages/unzip/src/ziptypes.pp svneol=native#text/plain
+packages/users/Makefile svneol=native#text/plain
+packages/users/Makefile.fpc svneol=native#text/plain
 packages/users/examples/testpass.pp svneol=native#text/plain
 packages/users/examples/testuser.pp svneol=native#text/plain
-packages/users/grp.pp svneol=native#text/plain
-packages/users/pwd.pp svneol=native#text/plain
-packages/users/shadow.pp svneol=native#text/plain
+packages/users/fpmake.pp svneol=native#text/plain
+packages/users/src/grp.pp svneol=native#text/plain
+packages/users/src/pwd.pp svneol=native#text/plain
+packages/users/src/shadow.pp svneol=native#text/plain
 packages/users/src/users.pp svneol=native#text/plain
 packages/uuid/Makefile svneol=native#text/plain
 packages/uuid/Makefile.fpc svneol=native#text/plain
