--- a/.gitattributes
+++ b/.gitattributes
@@ -4372,6 +4372,11 @@ packages/users/src/grp.pp svneol=native#text/plain
 packages/users/src/pwd.pp svneol=native#text/plain
 packages/users/src/shadow.pp svneol=native#text/plain
 packages/users/src/users.pp svneol=native#text/plain
+packages/utmp/Makefile svneol=native#text/plain
+packages/utmp/Makefile.fpc svneol=native#text/plain
+packages/utmp/examples/testutmp.pp svneol=native#text/plain
+packages/utmp/fpmake.pp svneol=native#text/plain
+packages/utmp/src/utmp.pp svneol=native#text/plain
 packages/uuid/Makefile svneol=native#text/plain
 packages/uuid/Makefile.fpc svneol=native#text/plain
 packages/uuid/README svneol=native#text/plain
