--- a/.gitattributes
+++ b/.gitattributes
@@ -2078,16 +2078,6 @@ packages/extra/sndfile/fpmake.pp svneol=native#text/plain
 packages/extra/sndfile/sfplay.pp svneol=native#text/plain
 packages/extra/sndfile/sndfile.pp svneol=native#text/plain
 packages/extra/sndfile/testc.c -text
-packages/extra/svgalib/Makefile svneol=native#text/plain
-packages/extra/svgalib/Makefile.fpc svneol=native#text/plain
-packages/extra/svgalib/README -text
-packages/extra/svgalib/fpmake.inc svneol=native#text/plain
-packages/extra/svgalib/fpmake.pp svneol=native#text/plain
-packages/extra/svgalib/svgalib.pp svneol=native#text/plain
-packages/extra/svgalib/testvga.pp svneol=native#text/plain
-packages/extra/svgalib/vgamouse.h -text
-packages/extra/svgalib/vgamouse.pp svneol=native#text/plain
-packages/extra/svgalib/vgatest.pp svneol=native#text/plain
 packages/extra/univint/ABActions.pas svneol=native#text/plain
 packages/extra/univint/ABAddressBook.pas svneol=native#text/plain
 packages/extra/univint/ABGlobals.pas svneol=native#text/plain
@@ -4342,6 +4332,15 @@ packages/sqlite/src/sqlitedb.pas svneol=native#text/plain
 packages/sqlite/tests/test.pas svneol=native#text/plain
 packages/sqlite/tests/testapiv3x.README svneol=native#text/plain
 packages/sqlite/tests/testapiv3x.pp svneol=native#text/plain
+packages/svgalib/Makefile svneol=native#text/plain
+packages/svgalib/Makefile.fpc svneol=native#text/plain
+packages/svgalib/README svneol=native#text/plain
+packages/svgalib/fpmake.pp svneol=native#text/plain
+packages/svgalib/src/svgalib.pp svneol=native#text/plain
+packages/svgalib/src/vgamouse.h svneol=native#text/plain
+packages/svgalib/src/vgamouse.pp svneol=native#text/plain
+packages/svgalib/tests/testvga.pp svneol=native#text/plain
+packages/svgalib/tests/vgatest.pp svneol=native#text/plain
 packages/syslog/Makefile svneol=native#text/plain
 packages/syslog/Makefile.fpc svneol=native#text/plain
 packages/syslog/fpmake.pp svneol=native#text/plain
