--- a/.gitattributes
+++ b/.gitattributes
@@ -1673,15 +1673,6 @@ packages/extra/oggvorbis/Makefile svneol=native#text/plain
 packages/extra/oggvorbis/Makefile.fpc svneol=native#text/plain
 packages/extra/oggvorbis/ogg.pas svneol=native#text/plain
 packages/extra/oggvorbis/vorbis.pas svneol=native#text/plain
-packages/extra/openal/Makefile svneol=native#text/plain
-packages/extra/openal/Makefile.fpc svneol=native#text/plain
-packages/extra/openal/alch.inc svneol=native#text/plain
-packages/extra/openal/alexth.inc svneol=native#text/plain
-packages/extra/openal/alh.inc svneol=native#text/plain
-packages/extra/openal/examples/Makefile svneol=native#text/plain
-packages/extra/openal/examples/Makefile.fpc svneol=native#text/plain
-packages/extra/openal/examples/madopenal.pas svneol=native#text/plain
-packages/extra/openal/openal.pas svneol=native#text/plain
 packages/extra/openssl/Makefile svneol=native#text/plain
 packages/extra/openssl/Makefile.fpc svneol=native#text/plain
 packages/extra/openssl/examples/Makefile svneol=native#text/plain
@@ -4124,6 +4115,15 @@ packages/odbc/src/odbcsql.pas svneol=native#text/plain
 packages/odbc/src/odbcsqldyn.pas svneol=native#text/plain
 packages/odbc/tests/testodbc.mdb -text
 packages/odbc/tests/testodbc.pp svneol=native#text/plain
+packages/openal/Makefile svneol=native#text/plain
+packages/openal/Makefile.fpc svneol=native#text/plain
+packages/openal/examples/Makefile svneol=native#text/plain
+packages/openal/examples/Makefile.fpc svneol=native#text/plain
+packages/openal/examples/madopenal.pas svneol=native#text/plain
+packages/openal/src/alch.inc svneol=native#text/plain
+packages/openal/src/alexth.inc svneol=native#text/plain
+packages/openal/src/alh.inc svneol=native#text/plain
+packages/openal/src/openal.pas svneol=native#text/plain
 packages/opengl/Makefile svneol=native#text/plain
 packages/opengl/Makefile.fpc svneol=native#text/plain
 packages/opengl/examples/Makefile svneol=native#text/plain
